# text-to-cad

./: .gitignore  README.md  main.py  manage_vector_db.py  pyproject.toml  pyproject.toml.backup  read.md  vector_db.py
cadquery_info/cq_examples/: braille_example.py  classic_occ_bottle.py  construction_geometry.py  copying_workplanes.py  create_workplanes_on_faces.py  cycloidal_gears.py  edge_with_spline.py  extruded_prismatic_solid.py  extruding_until_a_given_face.py  lego_block.py  locate_workplace_on_vertex.py  making_counter_bored_and_counter_sunk_holes.py  making_lofts.py  mirroring_3d_objects.py  mirroring_from_faces.py  mirroring_symmetric_geometry.py  move_current_working_point.py  offset_wires_in_2d.py  offset_workplanes.py  panel_with_connector_holes.py  parametric_bearing_pillow_block.py  parametric_block.py  parametric_enclosure.py  phone_stand.py  plate_with_hole.py  polygons.py  polylines.py  profiles_using_lines_and_arcs.py  rotated_workplanes.py  rounding_corner_with_fillet.py  shelling_to_create_thin_features.py  simple_rectangular_plate.py  splitting_an_object.py  tagging_objects.py  using_point_lists.py
graph/: data_models.py  graph.py  nodes.py  state.py  tools.py  visualize.py
prompts/: cad_code_validation.md  cad_design_critique.md  cad_generation.md  design_instructions.md  prompt_to_dims.md
scratch/: cad_example.py  cad_hf_model.py  check_cadquery_import.py  openai_multimodal_check.py  sample_screenshots.py  sample_screenshots_0.py  sample_screenshots_1.py  sample_validation.py  stl_screenshots.py  validation_checking.py  view_stl.py
utils/: generate_screenshots.py  utils.py
